fix loading icon on mobile apps

--- a/modules/jaggery-apps/app-publisher-web/themes/mobileapp/css/es-publisher-commons.css
+++ b/modules/jaggery-apps/app-publisher-web/themes/mobileapp/css/es-publisher-commons.css
@@ -1587,3 +1587,4 @@ ul.dropdown-menu.notifications {
 button.btn.btn-reject-proceed {
     background-color: #ccc;
 }
+.load-seperator{margin-right: 20px;}
